applications/pelican/overlays/use1/panel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panel
  namespace: pelican
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pelican-panel
  template:
    metadata:
      labels:
        app: pelican-panel
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: panel
          image: ghcr.io/pelican-dev/panel:latest
          workingDir: /var/www/html
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /var/www/html/storage/logs/supervisord
              chmod +x /entrypoint.sh
              exec /entrypoint.sh /usr/bin/supervisord -c /etc/supervisord.conf
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: pelican-data
              mountPath: /pelican-data
            - name: pelican-logs
              mountPath: /var/www/html/storage/logs
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: pelican-data
          persistentVolumeClaim:
            claimName: pelican-data
        - name: pelican-logs
          emptyDir: {}
