applications/pelican/overlays/use1/cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: pelican
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: pelican-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: pelican
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pelican-cache
  template:
    metadata:
      labels:
        app: pelican-cache
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
