applications/pelican/overlays/use1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: panel
  namespace: pelican
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: pelican-panel
